[tool.poetry]
name = "dtf_bot"
version = "0.1.0"
description = ""
authors = ["Evgeny Kemerov <eskemerov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1"
djangorestframework = "^3.9"
python-dotenv = "^0.13"
psycopg2-binary = "^2.8"
uwsgi = "^2.0"
celery = {version = "^4.3", extras= ["redis"]}
requests = "^2.21"
sentry-sdk = "^0.8.0"
ddtrace = "^0.33.0"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
flake8 = "^3.7"
pylint-django = "^2.0"
black = "^19.10b0"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
